<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ввод данных</string>
    <!--InputActivity-->
    <string name="input_title">Введите данные студента</string>
    <string name="label_full_name">ФИО</string>
    <string name="hint_full_name">Иванов Иван Иванович</string>
    <string name="label_group">Группа</string>
    <string name="hint_group">БСБО-10-23</string>
    <string name="label_age">Возраст</string>
    <string name="hint_age">18</string>
    <string name="label_grade">Желаемая оценка</string>
    <string name="hint_grade">4</string>
    <string name="button_submit">Отправить данные</string>
    <!--DisplayActivity-->
    <string name="display_title">Данные студента</string>
    <string name="button_back">Вернуться</string>
    <!--pop_up_msg-->
    <string name="fill_all_fields">Заполните все поля!</string>
    <string name="invalid_numbers">Неверные значения!</string>

    <string name="login_failed" translatable="false">Ошибка входа</string>
    <string name="invalid_username" translatable="false">Неверное имя пользователя</string>
    <string name="invalid_password" translatable="false">Неверный пароль</string>

    <string name="schedule_title" translatable="false">Введите информацию о днях посещения</string>
    <string name="day_label" translatable="false">День</string>
    <string name="day_hint" translatable="false">Понедельник</string>
    <string name="time_label" translatable="false">Время</string>
    <string name="time_hint" translatable="false">10:00</string>
    <string name="comments_label" translatable="false">Комментарии</string>
    <string name="comments_hint" translatable="false">Дополнительные комментарии</string>
    <string name="ok_button" translatable="false">OK</string>

    <string name="add_schedule" translatable="false">Добавить расписание</string>
    <string name="schedule_success" translatable="false">Время занятия успешно передано: %1$s %2$s</string>

    <string name="static_fragment" translatable="false">Статический фрагмент</string>
    <string name="dynamic_fragment" translatable="false">Динамический фрагмент</string>
    <string name="container_view_fragment" translatable="false">FragmentContainerView</string>

    <string name="fragments" translatable="false">Фрагменты</string>
</resources>